# ai-prompt-studio

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/crud/: user.py
backend/app/models/: user.py
backend/tests/: test_main.py
